# 3DSoftRender

./: CMakeLists.txt  gMath.c  gMath.h  gRender.c  gRender.h  main.c
